--- a/iotproductsite/css/style.css
+++ b/iotproductsite/css/style.css
@@ -240,6 +240,11 @@ input.contact-submit[type="submit"]:hover {
     box-shadow: 0px 10px 20px #888888;
 }
 
+.successful {
+    text-align: center;
+    padding: 100px 0;
+}
+
 /* ----- The footer ----- */
 footer {
     text-align: center;
